python3.13 (3.13.0~b3-1) UNRELEASED; urgency=medium

  * New upstream beta.
  * Use https in watch file.
  * Refresh patches.
  * Migrate some more bits of packaging from 3.12 to 3.13.
  * Drop old breaks+replace.
  * Rename python3.12-updates.diff to compileall-minimal.diff.
  * Document that _typing is included in -minimal.

 -- Stefano Rivera <stefanor@debian.org>  Sun, 30 Jun 2024 15:58:55 -0700

python3.13 (3.13.0~b2-1) unstable; urgency=medium

  [ Matthias Klose ]
  * Configure without --with-dtrace on the Hurd.

  [ Stefano Rivera ]
  * Python 3.13.0 beta 2 snapshot.
  * Refresh patches.
  * Bump watch file to 3.13.

 -- Stefano Rivera <stefanor@debian.org>  Tue, 11 Jun 2024 15:14:35 +0100

python3.13 (3.13.0~b1-2) unstable; urgency=medium

  * Configure --with-system-libmpdec=no.

 -- Matthias Klose <doko@debian.org>  Wed, 15 May 2024 12:13:44 +0200

python3.13 (3.13.0~b1-1) unstable; urgency=medium

  * Python 3.13.0 beta 1 snapshot.
  * Update symbols files.
  * Refresh patches.

 -- Matthias Klose <doko@debian.org>  Wed, 15 May 2024 08:57:29 +0200

python3.13 (3.13.0~a6-1) experimental; urgency=medium

  * Python 3.13.0 alpha 6 snapshot.
  * Refresh patches.

 -- Matthias Klose <doko@debian.org>  Wed, 01 May 2024 07:51:20 +0200

python3.12 (3.12.3-1) unstable; urgency=medium

  * Python 3.12.3 release.

 -- Matthias Klose <doko@debian.org>  Wed, 10 Apr 2024 07:33:47 +0200

python3.12 (3.12.2-5) unstable; urgency=medium

  * Update to the 3.12 branch 2024-02-02.
    - Make C API compatible with ISO C90 (GH-116950). Closes: #1064028.
    - Upstream patch for GH-115874.
    - Still identify as "3.12.2", because "3.12.2+" is mis-treated by some
      third-party packages.
  * Use CFLAGS_NODIST, LDFLAGS_NODIST for passing build flags.
  * d/rules: Move configure/build targets for each build together.
  * Drop ffi configure options, obsolete.
  * Re-enable PGO/LTO builds.

 -- Matthias Klose <doko@debian.org>  Tue, 02 Apr 2024 16:53:02 +0200
